Issue #LR-517 feat: new API to upload public encryption key